[project]
name = "generate-ct"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "huggingface-hub[cli]",
    "super_resolution",
    "transformer_maskgit",
]


[dependency-groups]
dev = [
    "ipykernel",
    "ipywidgets",
    "torchio[plot]",
]

[tool.uv.sources]
super_resolution = { workspace = true }
transformer_maskgit = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/super_resolution",
    "packages/transformer_maskgit",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
